--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 body {
     background-color: rgba(238, 223, 107, 0.5);
+    display: grid;
+    /* box-sizing: border-box; */
+    /* padding: 50px calc(50% - 460px); */
+    /* width: 1200px; */
+    margin: 0;
 }
 .burger {
     position: absolute;
@@ -8,6 +13,7 @@ body {
     width: 50px;
     height: 50px;
     cursor: pointer;
+    z-index: 1;
 }
 .burger span, .burger span:before, .burger span:after {
     width: 100%;
@@ -64,22 +70,150 @@ body {
     padding-top: 60px;
     transition: 0.5s;
     font-size: 23px;
-};
+}
 .btn {
-    border: solid;
+    border: solid 2px;
+    border-radius: 8px;
+    padding: 4px;
+    font-size: 16px;
     /* display: block; */
     transition: 0.3s;
-};
-
-.main {
-    transition: margin-left .5s;
-    padding: 20px;
 }
-@media (max-height: 450px) {
+
+.cards_container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+    padding: 70px calc(50% - 420px);
+    align-items: center;
+    width: 900px;
+    justify-content: center;
+    overflow-x: hidden;
+    
+}
+.card {
+    grid-template-columns: 70px auto;
+    gap: 30px;
+    border: solid #6E6B53 1px;
+    border-radius: 8px;
+    width: 200px;
+    height: 90px;
+    
+}
+@media (max-width: 1024px) {
+    .body {
+        width: 900px;
+        padding: 70px;
+    }
+    .cards_container {
+        grid-template-columns: repeat(2, 1fr);
+        /* padding: 50px; */
+    }
+}
+@media (max-width: 820px) {
+    .body {
+        width: 600px;
+        padding: 70px;
+    }
+    .cards_container {
+        grid-template-columns: repeat(2, 1fr);
+        /* padding: 50px; */
+    }
+}
+@media (max-width: 450px) {
     .menu {
         padding-top: 15px;
     }
     .btn {
         font-size: 18px;
     }
+    .cards_container {
+        /* padding: 30px; */
+        grid-template-columns: repeat(1, 1fr);
+        padding: 70px 100px;
+    }
+}
+.card>.pic {
+    width: 70px;
+    /* height: 70px; */
+    background-color: #EDE6B2;
+    border-radius: 8px;
+    grid-row-end: span 2;
+    background-size: cover;
+    background-position: center;
+}
+.card>.name {
+    grid-column-end: span 2;
+    font-size: 24px;
+}
+.card>.age {
+    font-size: 2rem;
+    justify-self: center;
+}
+.card>.rate {
+    font-size: 14px;
+    display: flex;
+    justify-self: center;
+}
+.popup-wrapper {
+    position: fixed;
+    background-color: #2224;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    backdrop-filter: blur(2px);
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+.popup {
+    padding: 30px;
+    background-color: #dedede;
+    width: 300px;
+    box-sizing: border-box;
+    border-radius: 8px;
+    position: relative;
+    display: none;
+}
+.popup>.close {
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    border: 1px solid silver;
+    background-color: #cebebe;
+    color: #fff;
+    font-size: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    line-height: 1;
+    transform: rotate(45deg);
+    top: -10px;
+    right: -10px;
+    cursor: pointer;
+}
+.popup.active {
+    display: block;
+}
+.popup-wrapper.active {
+    display: flex;
+}
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+.row {
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
+}
+h2 {
+    margin: 0;
+}
+
+.popup h2 {
+    margin-bottom: 30px;
 }
